CHATS_SIT/force-app/main/default/objects/T_CASE_APPLN_DTE__c.object
<CustomObject>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Application Date Information</relationshipLabel>
        <relationshipName>Application_Date_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maintain_Eligibility__c</fullName>
        <label>Maintain Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00387</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_APPLN_OLD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_APPLN_NEW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Updated Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMT_OVERRIDE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSN_OVERRIDE__c</fullName>
        <label>Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Override_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reopened_or_Elig__c</fullName>
        <label>Reopened_or_Elig</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Reopen</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Date Information</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Application Date Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Date Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>